tests/bad_programs/type_errors/simple_undecl_var_exp.nc
int main() {
    var;
    return 0;
}
